# Dual_arm_robot

./: .gitmodules  README.md
Dual_arm_robot_unity/vr_unity/scripts/: SendVRControllerData.cs  one_arm.cs.txt
Dual_arm_robot_urdf/: dual_ur_robotiq.urdf.xacro  ur5e.urdf.xacro
Dual_arm_robot_urdf/meshes/: dual_arm_mount.STL
Dual_arm_robot_urdf/meshes/ur3e/collision/: finger_2.STL
dual_arm_robot_description/: CMakeLists.txt  package.xml
dual_arm_robot_description/config/: left_ur3e_calibration.yaml  right_ur3e_calibration.yaml
dual_arm_robot_description/launch/: display.launch.py
dual_arm_robot_description/meshes/ur3e/collision/: basegripper.STL
dual_arm_robot_description/robot/: dual_gripper.ros2_control.xacro  dual_ur_robotiq.urdf.xacro  ur5e.urdf.xacro
dual_arm_robot_description/rviz/: dual_arm_robot_config.rviz
dual_arm_robot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
dual_arm_robot_moveit_config/config/: controllers.yaml  dual_ur_robotiq.ros2_control.xacro  dual_ur_robotiq.srdf  dual_ur_robotiq.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  left_controllers.yaml  left_ur_servo.yaml  moveit_controllers.yaml  right_controllers.yaml  right_ur_servo.yaml  ros2_controllers.yaml  ur_servo.yaml
dual_arm_robot_moveit_config/launch/: demo.launch.py  dual_ur_launch.py  dual_ur_moveit_planning.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
dual_arm_robot_unity/vr_unity/scripts/: two_arm.cs.txt
ur3e_vr_interface/: CMakeLists.txt  package.xml
ur3e_vr_interface/msg/: PosRot.msg
ur3e_vr_interface/srv/: SetGripper.srv
ur_vr_control/: CMakeLists.txt  package.xml
ur_vr_control/config/: config.yaml  ur3e_config.yaml  vr_config.yaml
ur_vr_control/launch/: ur_vr_control.launch.py  ur_vr_launch.py
ur_vr_control/scripts/: dual_joint_state_merger.py  image_stream_server.py  quaternion_utils.py  realsense_stream.py  urvr_moveit_control.py  vr_client.py
